[package]
name = "midas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
linuxwrapper = { path = "../linuxwrapper" }
# Wrapper around the gimli and object crate, for parsing & understanding ELF and DWARF, which is at the core of any nix debugger
debug_info = { path = "../debug_info" }